# quantize-ai

./: .gitignore  .gitmodules  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
core/common/: logger.py  port_utils.py  ssh.py
core/inference_engine/hf/: convert_llama.py  input_model_inference.py  llama_inference.py  test_inference.py  test_llama_inference.py
core/inference_engine/vllm/: test_vllm_inference.py  vllm_inference.py
core/main/: server_endpoint.py
core/model_deployer/deployer/: deployer.py  entrypoint.sh  hf_utils.py  scripts.py
core/model_deployer/multi_cluster/: auto_scaler.py  deployment_manager.py  load_balancer.py  request_api.py  request_queue.py
core/model_deployer/profiler/: commands.py  profiler.py
core/test_poc/: poc_app.py
new-frontend/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
new-frontend/app/: entry.client.tsx  entry.server.tsx  root.tsx  tailwind.css  types.ts  utils.ts
new-frontend/app/components/Icons/: Assistant.tsx  Send.tsx  User.tsx
new-frontend/app/components/LoadingDots/: LoadingDots.tsx  Robot.tsx
new-frontend/app/components/Message/: Message.tsx
new-frontend/app/components/Sidebar/: Sidebar.tsx
new-frontend/app/context/: index.ts
new-frontend/app/routes/: _index.tsx
test_md/: BRIANTEST.md  DANNYTEST.md  SAHILTEST.md  SHRAYTEST.md  SOHAMTEST.md
